added script block

--- a/testme4.html
+++ b/testme4.html
@@ -1,10 +1,14 @@
 <html>
 <head>  
     <title> this is a test4 page </title>
-    
+    <script>
+          document.getElementById("log").innerHTML("Modified Comments")
+    </script>
+
  </head>
 <body>
     <h1>hello test4</h1>
+    <div id="log">Original Comments</div>
 </body>
 <html>
 
