--- a/testme4.html
+++ b/testme4.html
@@ -7,7 +7,7 @@
 
  </head>
 <body>
-    <h1>hello test4</h1>
+    <h1><b>hello test4</b></h1>
     <div id="log">Original Comments</div>
 </body>
 <html>
